fix(java): replace List.of() with Collections.emptyList() for Java 8 compatibility